add: nexus user and role api

--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,26 @@
     <groupId>com.hfwas.devops</groupId>
     <artifactId>hfwas-devops</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>devops-tool-api</module>
+        <module>devops-dependencies</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.hfwas.devops</groupId>
+                <artifactId>devops-dependencies</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
