--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
 </project>
