--- a/devops-common/devops-common-core/pom.xml
+++ b/devops-common/devops-common-core/pom.xml
@@ -29,5 +29,9 @@
             <artifactId>devops-dependencies</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
