--- a/devops-core/pom.xml
+++ b/devops-core/pom.xml
@@ -56,6 +56,10 @@
             <groupId>com.hfwas.devops</groupId>
             <artifactId>devops-tool-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hfwas.devops</groupId>
+            <artifactId>devops-common-core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
