--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -24,6 +24,8 @@
         <mybatis.version>3.5.17</mybatis.version>
         <mysql.version>5.1.49</mysql.version>
         <snakeyaml.version>2.2</snakeyaml.version>
+        <easyexcel.version>4.0.3</easyexcel.version>
+        <jsoup.version>1.18.3</jsoup.version>
     </properties>
 
     <dependencyManagement>
@@ -79,6 +81,16 @@
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>${snakeyaml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsoup.version}</version>
             </dependency>
 
             <dependency>
