--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -26,6 +26,7 @@
         <snakeyaml.version>2.2</snakeyaml.version>
         <easyexcel.version>4.0.3</easyexcel.version>
         <jsoup.version>1.18.3</jsoup.version>
+        <guava.version>33.4.0-jre</guava.version>
     </properties>
 
     <dependencyManagement>
@@ -91,6 +92,11 @@
                 <groupId>org.jsoup</groupId>
                 <artifactId>jsoup</artifactId>
                 <version>${jsoup.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
 
             <dependency>
