add: devops-common-entity module

--- a/devops-common/pom.xml
+++ b/devops-common/pom.xml
@@ -13,5 +13,6 @@
 
     <modules>
         <module>devops-common-core</module>
+        <module>devops-common-entity</module>
     </modules>
 </project>
