--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>devops-dependencies</module>
         <module>devops-common</module>
         <module>devops-core</module>
+        <module>devops-common</module>
     </modules>
 
     <properties>
