--- a/devops-common/pom.xml
+++ b/devops-common/pom.xml
@@ -14,5 +14,6 @@
     <modules>
         <module>devops-common-core</module>
         <module>devops-common-entity</module>
+        <module>devops-common-service</module>
     </modules>
 </project>
