--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -22,11 +22,13 @@
         <spring-boot.version>3.3.4</spring-boot.version>
         <redisson.version>3.41.0</redisson.version>
         <mybatis.version>3.5.17</mybatis.version>
-        <mysql.version>5.1.49</mysql.version>
+        <mybatis-spring.version>3.0.3</mybatis-spring.version>
+        <mysql.version>8.0.22</mysql.version>
         <snakeyaml.version>2.2</snakeyaml.version>
         <easyexcel.version>4.0.3</easyexcel.version>
         <jsoup.version>1.18.3</jsoup.version>
         <guava.version>33.4.0-jre</guava.version>
+        <spring-tx.version>6.1.10</spring-tx.version>
     </properties>
 
     <dependencyManagement>
@@ -67,6 +69,16 @@
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
                 <version>${mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${spring-tx.version}</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
