--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -121,6 +121,16 @@
                 <artifactId>devops-common-core</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.hfwas.devops</groupId>
+                <artifactId>devops-common-service</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.hfwas.devops</groupId>
+                <artifactId>devops-common-entity</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
