--- a/devops-common/devops-common-entity/pom.xml
+++ b/devops-common/devops-common-entity/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
