--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -33,6 +33,7 @@
         <webmvc.version>6.1.14</webmvc.version>
         <mapstruct.version>1.6.3</mapstruct.version>
         <mapstruct-processor.version>1.6.3</mapstruct-processor.version>
+        <commons-io.version>2.17.0</commons-io.version>
     </properties>
 
     <dependencyManagement>
@@ -133,6 +134,11 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct-processor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
             </dependency>
 
             <dependency>
