--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file pom.xml -Dmaven.test.skip=true
+        run:  mvn clean install -pl devops-dependencies && mvn clean install -pl devops-common && mvn clean install -pl devops-tool-api && mvn -B package --file pom.xml -Dmaven.test.skip=true
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
