--- a/devops-common/devops-common-core/pom.xml
+++ b/devops-common/devops-common-core/pom.xml
@@ -28,5 +28,9 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+        </dependency>
     </dependencies>
 </project>
