--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -34,6 +34,7 @@
         <mapstruct.version>1.6.3</mapstruct.version>
         <mapstruct-processor.version>1.6.3</mapstruct-processor.version>
         <commons-io.version>2.17.0</commons-io.version>
+        <commons-collections.version>3.2.2</commons-collections.version>
         <tomcat-embed.version>10.1.34</tomcat-embed.version>
         <protobuf-java.version>3.25.5</protobuf-java.version>
     </properties>
@@ -169,6 +170,11 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>${commons-collections.version}</version>
             </dependency>
 
             <dependency>
