--- a/devops-core/src/main/resources/application-dev.yml
+++ b/devops-core/src/main/resources/application-dev.yml
@@ -9,6 +9,13 @@ spring:
     username: root
     password:
     url: jdbc:mysql://localhost:3306/hfwas-devops?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8&autoReconnect=true&failOverReadOnly=false&transformedBitIsBoolean=true&allowPublicKeyRetrieval=true
+    hikari:
+      minimum-idle: 5
+      idle-timeout: 180000
+      auto-commit: true
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
   data:
     redis:
       port: 6379
@@ -21,7 +28,8 @@ feign:
 devops:
   depency:
     java:
-      url: https://repo.maven.apache.org/maven2
+#      url: https://repo.maven.apache.org/maven2
+      url: https://mvnrepository.com/artifact
     npm:
       url: https://registry.npmmirror.com
   harbor:
