add: 漏洞同步优化

--- a/devops-core/src/main/resources/application-dev.yml
+++ b/devops-core/src/main/resources/application-dev.yml
@@ -45,6 +45,7 @@ devops:
     username: admin
     password: admin
   vulnerability:
+    path: /Users/houfei/github
     avd:
       url: https://avd.aliyun.com
     cwe:
