--- a/devops-common/devops-common-service/pom.xml
+++ b/devops-common/devops-common-service/pom.xml
@@ -27,11 +27,14 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.hfwas.devops</groupId>
             <artifactId>devops-common-entity</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
