--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -38,6 +38,7 @@
         <commons-collections.version>3.2.2</commons-collections.version>
         <tomcat-embed.version>10.1.34</tomcat-embed.version>
         <protobuf-java.version>3.25.5</protobuf-java.version>
+        <semver.version>0.10.2</semver.version>
     </properties>
 
     <dependencyManagement>
@@ -173,6 +174,11 @@
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
                 <version>${commons-collections.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.zafarkhaja</groupId>
+                <artifactId>java-semver</artifactId>
+                <version>${semver.version}</version>
             </dependency>
 
             <dependency>
