--- a/devops-tool-api/pom.xml
+++ b/devops-tool-api/pom.xml
@@ -36,6 +36,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>io.github.cdancy</groupId>
+            <artifactId>jenkins-rest</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
