--- a/devops-common/devops-common-entity/pom.xml
+++ b/devops-common/devops-common-entity/pom.xml
@@ -30,6 +30,10 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
