--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -20,7 +20,7 @@
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <gson.version>2.11.0</gson.version>
         <jackson-databind.version>2.17.2</jackson-databind.version>
-        <spring-boot.version>3.3.4</spring-boot.version>
+        <spring-boot.version>3.3.5</spring-boot.version>
         <redisson.version>3.41.0</redisson.version>
         <mybatis.version>3.5.17</mybatis.version>
         <mybatis-plus.version>3.5.10.1</mybatis-plus.version>
@@ -92,6 +92,10 @@
                     <exclusion>
                         <groupId>org.apache.tomcat.embed</groupId>
                         <artifactId>tomcat-embed-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-context</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
