add devops_vul_cpe and devops_vul_software

--- a/devops-common/devops-common-entity/pom.xml
+++ b/devops-common/devops-common-entity/pom.xml
@@ -34,6 +34,10 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>us.springett</groupId>
+            <artifactId>cpe-parser</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
