--- a/devops-base/pom.xml
+++ b/devops-base/pom.xml
@@ -108,5 +108,10 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.hfwas.devops</groupId>
+            <artifactId>devops-common-core</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
