add DevopsSession manage

--- a/devops-base/pom.xml
+++ b/devops-base/pom.xml
@@ -116,6 +116,14 @@
             <groupId>com.hfwas.devops</groupId>
             <artifactId>devops-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hfwas.devops</groupId>
+            <artifactId>devops-common-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hfwas.devops</groupId>
+            <artifactId>devops-common-starter-mybatis</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
