--- a/.github/workflows/code-server.yml
+++ b/.github/workflows/code-server.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          file: deploy/dockerfile/Dockerfile_go124
+          file: deploy/dockerfile/Dockerfile_java23
           push: true
-          tags: registry.cn-hangzhou.aliyuncs.com/dkyy/code-server:go124
+          tags: registry.cn-hangzhou.aliyuncs.com/dkyy/code-server:java23
           platforms: linux/amd64
